# hermes-backup

./: .gitignore  hermes-agent-architecture.html
.hermes/memories/: autoresearch_last_run.md
memories/: autoresearch_last_run.md
projects/: agent-orchestrator.yaml
scripts/: add_trigger_conditions.py  auto_skill_patch.py  codex-minimax  fix_skills_tool.py  gemma4_voice_assistant.py  skill_indexer.py  skill_insight_analyzer.py  stt_engine.py  tiktok_mask_sales.md  viral-script-formula.md  voice_assistant.py
skills/: .bundled_manifest  .curator_state  .usage.json
skills/browser-harness/: SKILL.md  browser-install.md
skills/browser-harness-install/: SKILL.md
skills/dogfood/: SKILL.md
skills/engineering-diagnose/: SKILL.md
wiki/: .crontab  .gitignore  SCHEMA.md  SCHEMA.md.bak  WIKI_IMPROVEMENT_PLAN.md  index.md  index.md.bak  log.md  log.md.tmp  sync.sh
wiki/hermes-agent-self-evolution/: PLAN.md  README.md  pyproject.toml
wiki/hermes-agent-self-evolution/datasets/skills/wiki-orphan-resolution/: holdout.jsonl  train.jsonl  val.jsonl
wiki/hermes-agent-self-evolution/datasets/skills/wiki-self-heal/: holdout.jsonl  train.jsonl  val.jsonl
wiki/hermes-agent-self-evolution/evolution/core/: config.py  dataset_builder.py
wiki/hermes-agent-self-evolution/evolution/skills/: evolve_skill.py
wiki/hermes-agent-self-evolution/hermes_agent_self_evolution.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
wiki/hermes-agent-self-evolution/tests/core/: test_constraints.py  test_external_importers.py
wiki/hermes-agent-self-evolution/tests/skills/: test_skill_module.py
(+4081 files in other folders)
